--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
-   
+    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
     <!-- Additional CSS must be placed after Bootstrap CSS -->
-    <link rel="stylesheet" href="/https://fonts.googleapis.com/css?family=Lobster|Open+Sans">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
+    <link rel="stylesheet" href="css/styles.css" />
 
     <title>NuCamp: A Better Way To Camp</title>
 </head>
@@ -20,6 +20,9 @@
     <header class="jumbotron jumbotron-fluid">
         <div class="container">
             <div class="row">
+                <div class="col-4 col-sm-3 col-md-2 align-self-center">
+                   <img src="img/logo.png" class="img-fluid" /></a>
+                </div>
                 <div class="col">
                     <h1>NuCamp</h1>
                     <h2>a better way to camp</h2>
@@ -30,17 +33,25 @@
 <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
         <div class="container">
-             <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-targer="#nucampNavbar">
+            <a class="navbar-brand" href="#"><img src="img/logo.png" class="img-fluid" width="30" height="30" /></a>
+            <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
+                aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
-             </button>
-             <div class="collapse navbar-collapse" id="nucampNavBar">
-                 <ul class="navbar-nav">
-                     <li class="nav-itme active"><a class="nav-link" href="#">Home</a></li>
-                     <li class="nav-itme"><a class="nav-link" href="/week1/aboutus.html">About</a></li>
-                     <li class="nav-item"><a class="nav-link" href="#">Sites</a></li>
-                     <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
-                 </ul>
-             </div>
+            </button>
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+                        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                            <li class="nav-itme active"><a class="nav-link" href="#"><i class="fa fa-home fa-lg"></i>Home</a></li>
+                            <li class="nav-itme"><a class="nav-link" href="aboutus.html"><i class="fa fa-info fa-lg"></i>About</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-list fa-lg"></i>Sites</a></li>
+                            <li class="nav-item"><a class="nav-link" href="contactus.html"><i class="fa fa-address-card fa-lg"></i>Contact</a>
+                            </li>
+                        </ul>
+                    <!-- Serach Bar -->
+                        <form class="form-inline ml-lg-0">
+                            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                            <button class="btn btn-outline-success bg-success text-white my-2 my-sm-0" type="submit">Search</button>
+                        </form>
+            </div>
         </div>
     </nav>
 
@@ -51,8 +62,17 @@
                 <h2 class="text-sm-right">Discover & Review</h2>
             </div>
             <div class="col">
-                <h3>Our Campsites</h3>
-                <p>Explore our growing database of curated campsites and leave your own reviews!</p>
+                <div class="media">
+                    <!--<img class="d-flex mr-3 img-thumbanail" src="img/breadcrumb-trail-thumb.jpg" alt="Breadcrumb Trail">-->
+                    <!-- 4:3 aspect ratio -->
+                    <div class="d-flex mr-3">
+                        <iframe class="embed-responsive-item" src="img/sd1570587637_2.mp4" width="200"></iframe>
+                    </div>
+                    <div class="media-body align-self-center">
+                        <h3>Our Campsites</h3>
+                        <p class="d-non d-sm-block">Explore our growing database of curated campsites and leave your own reviews!</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -76,39 +96,49 @@
                 <h2 class="text-sm-right">Our Community Partners</h2>
             </div>
             <div class="col">
-                <h3>Bootstrap Outfitters</h3>
-                <p>Bootstrap Outfitters supplies you with gear you need at prices you can't beat.</p>
+                <div class="media">
+                    <img class="d-flex mr-3 img-thumbnail" src="img/bootstrap-thumb.png" alt="Bootstrap Outfitters">
+                    <div class="media-body align-self-center">
+                        <h3>Bootstrap Outfitters</h3>
+                        <p class="d-none d-sm-block">Bootstrap Outfitters supplies you with gear you need at prices you can't beat.</p>
+                    </div>
+                </div>
             </div>
         </div>        
     </div>
 
-    <footer>
+    <footer class="site-footer">
         <div class="container">
-            <div class="row row-content align-items-center">
-                <div class="col-4 col-sm-2">
+            <div class="row">
+                <div class="col-4 col-sm-2 offset-1">
                     <h5>Links</h5>
                     <ul class="list-unstyled">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="aboutus.html">About</a></li>
                         <li><a href="#">Sites</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="contactus.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="col-6 col-sm-5 text-center">
                     <h5>Social</h5>
-                    <a href="http://instagram.com/">Instagram</a>
-                    <a href="http://facebook.com/">Facebook</a>
-                    <a href="http://twitter.com/">Twitter</a>
-                    <a href="http://youtube.com/">YouTube</a>
+                    <a class="btn btn-social-icon-instagram" href="http://instagram.com/"><i
+                            class="fa fa-instagram fa-lg text-primary"></i>Instagram</a>
+                    <a class="btn btn-social-icon-facebook" href="http://facebook.com/"><i
+                            class="fa fa-facebook fa-lg text-primary"></i>Facebook</a>
+                    <a class="btn btn-social-icon-twitter" href="http://twitter.com/"><i
+                            class="fa fa-twitter fa-lg text-primary"></i>Twitter</a>
+                    <a class="btn btn-social-icon-youtube" href="http://youtube.com/"><i
+                            class="fa fa-youtube fa-lg text-primary"></i>YouTube</a>
                 </div>
                 <div class="col-sm-4 text-center">
-                    Tel: 1-206-555-1234<br />
-                    Email: campsites@nucamp.co
+                    <a role="button" class="btn btn-link" href="tel:+12065551234"><i
+                            class="fa fa-phone fa-lg text-primary"></i>Tel: 1-206-555-1234<br /></a>
+                    <a role="button" class="btn btn-link" href="mailto:campsites@nucamp.co"><i
+                            class="fa fa-envelope-o fa-lg text-primary"></i>Email: campsites@nucamp.co</a>
                 </div>
             </div>
-            
         </div>
-        </footer>
+    </footer>
 
 <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
 <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
