--- a/aboutus.html
+++ b/aboutus.html
@@ -32,7 +32,7 @@
             </div>
         </header>
         <!-- Navigation Bar -->
-        <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
+        <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
             <div class="container">
                 <a class="navbar-brand" href="index.html"><img src="img/logo.png" class="img-fluid" width="30"
                     height="30" /></a>
@@ -47,14 +47,15 @@
                         <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-list fa-lg"></i>Sites</a></li>
                         <li class="nav-item"><a class="nav-link" href="contactus.html"><i class="fa fa-address-card fa-lg"></i>Contact</a></li>
                     </ul>
-                    <form class="form-inline">
-                        <input class="form-control mr-md-2" type="search" placeholder="Search" aria-label="Search">
+                    <form class="form-inline my-2 my-lg-0">
+                        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                         <button class="btn btn-outline-success bg-success text-white my-2 my-sm-0" type="submit">Search</button>
                     </form>
                 </div>
             </div>
         </nav>
 
+        
         <div class="container">
             <div class="row">
                 <div class="col">
@@ -185,18 +186,18 @@
                     </div>
                     <div class="col-6 col-sm-5 text-center">
                         <h5>Social</h5>
-                        <a class="btn btn-social-icon-instagram" href="http://instagram.com/"><i
-                                class="fa fa-instagram fa-lg text-primary"></i></a>
-                        <a class="btn btn-social-icon-facebook" href="http://facebook.com/"><i
-                                class="fa fa-facebook fa-lg text-primary"></i></a>
-                        <a class="btn btn-social-icon-twitter" href="http://twitter.com/"><i
-                                class="fa fa-twitter fa-lg text-primary"></i></a>
-                        <a class="btn btn-social-icon-youtube" href="http://youtube.com/"><i
-                                class="fa fa-youtube fa-lg text-primary"></i></a>
+                        <a class="btn btn-social-icon-instagram btn-primary" href="http://instagram.com/"><i
+                                class="fa fa-instagram fa-lg"></i></a>
+                        <a class="btn btn-social-icon-facebook btn-primary" href="http://facebook.com/"><i
+                                class="fa fa-facebook fa-lg"></i></a>
+                        <a class="btn btn-social-icon-twitter btn-primary" href="http://twitter.com/"><i
+                                class="fa fa-twitter fa-lg"></i></a>
+                        <a class="btn btn-social-icon-youtube btn-primary" href="http://youtube.com/"><i
+                                class="fa fa-youtube fa-lg"></i></a>
                     </div>
-                    <div class="col-sm-4 text-center">
-                        <a role="button" class="btn btn-link" href="tel:+12065551234"><i
-                                class="fa fa-phone fa-lg text-primary"></i>Tel: 1-206-555-1234<br /></a>
+                    <div class="col col-sm-4 text-center">
+                        <a role="button" class="btn btn-link" href="tel:+12065551234"><i class="fa fa-phone fa-lg text-primary"></i>Tel:
+                            1-206-555-1234<br /></a>
                         <a role="button" class="btn btn-link" href="mailto:campsites@nucamp.co"><i
                                 class="fa fa-envelope-o fa-lg text-primary"></i>Email: campsites@nucamp.co</a>
                     </div>
