--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </div>
         </header>
         <!-- Navigation Bar -->
-        <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
+        <nav class="navbar navbar-dark navbar-expand-sm sticky-top"> <!--Ln 39 – Incorrect class. -->
             <div class="container">
                 <a class="navbar-brand" href="index.html"><img src="img/logo.png" class="img-fluid" width="30"
                         height="30" /></a>
@@ -46,20 +46,17 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-                    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                        <li class="nav-itme active"><a class="nav-link" href="index.html">
+                    <ul class="navbar-nav">
+                        <li class="nav-item active"><a class="nav-link" href="index.html">
                                 <i class="fa fa-home fa-lg"></i>Home</a></li>
-                        <li class="nav-itme"><a class="nav-link" href="aboutus.html">
+                        <li class="nav-item"><a class="nav-link" href="aboutus.html">
                                 <i class="fa fa-info fa-lg"></i>About</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">
                                 <i class="fa fa-list fa-lg"></i>Sites</a></li>
                         <li class="nav-item"><a class="nav-link" href="contactus.html">
                                 <i class="fa fa-address-card fa-lg"></i>Contact</a></li>
                     </ul>
-                    <form class="form-inline my-2 my-lg-0">
-                        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success bg-success text-white my-2 my-sm-0" type="submit">Search</button>
-                    </form>
+                   
                 </div>
             </div>
         </nav>
@@ -71,14 +68,10 @@
                 </div>
                 <div class="col">
                     <div class="media">
-                        <!--<img class="d-flex mr-3 img-thumbanail" src="img/breadcrumb-trail-thumb.jpg" alt="Breadcrumb Trail">-->
-                        <!-- 4:3 aspect ratio -->
-                        <div class="d-flex mr-3">
-                            <iframe class="embed-responsive-item" src="img/sd1570587637_2.mp4" width="200"></iframe>
-                        </div>
+                        <img class="d-flex mr-3 img-thumbnail" src="img/breadcrumb-trail-thumb.jpg" alt="Breadcrumb Trail" />
                         <div class="media-body align-self-center">
                             <h3>Our Campsites</h3>
-                            <p class="d-non d-sm-block">Explore our growing database of curated campsites and leave your
+                            <p class="d-none d-sm-block">Explore our growing database of curated campsites and leave your
                                 own reviews!</p>
                         </div>
                     </div>
@@ -88,12 +81,12 @@
             <!--Task 1-->
             <div class="row row-content align-items-center">
                 <div class="col-sm-4 col-md-3">
-                    <h2 class="text-sm-right">Featured Campsites</h2>
+                    <h2 class="text-lg-right">Featured Campsites</h2>
                 </div>
                 <div class="col">
                     <div class="media">
                         <div class="media-body align-self-center">
-                            <h3>React Lake Campground</h3>
+                            <h2>React Lake Campground</h2>
                             <p>Nestled in the foothills of the Chrome Mountains, this campground on the shores of the
                                 pristine React Lake is
                                 a favorite for fly fishers.</p>
@@ -102,12 +95,11 @@
                             alt="React Lake Campground" />
                     </div>
                 </div>
-
             </div>
 
             <div class="row row-content align-items-center">
                 <div class="col-sm-4 col-md-3">
-                    <h2 class="text-sm-right">Our Community Partners</h2>
+                    <h2 class="text-lg-right">Our Community Partners</h2>
                 </div>
                 <div class="col">
                     <div class="media">
@@ -161,35 +153,36 @@
 
         </div>
         <footer class="site-footer">
-            <div class="row">
-                <div class="col-4 col-sm-2 offset-1">
-                    <h5>Links</h5>
-                    <ul class="list-unstyled">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="aboutus.html">About</a></li>
-                        <li><a href="#">Sites</a></li>
-                        <li><a href="contactus.html">Contact</a></li>
-                    </ul>
-                </div>
-                <div class="col-6 col-sm-5 text-center">
-                    <h5>Social</h5>
-                    <a class="btn btn-social-icon-instagram btn-primary" href="http://instagram.com/"><i
-                            class="fa fa-instagram fa-lg"></i></a>
-                    <a class="btn btn-social-icon-facebook btn-primary" href="http://facebook.com/"><i
-                            class="fa fa-facebook fa-lg"></i></a>
-                    <a class="btn btn-social-icon-twitter btn-primary" href="http://twitter.com/"><i
-                            class="fa fa-twitter fa-lg"></i></a>
-                    <a class="btn btn-social-icon-youtube btn-primary" href="http://youtube.com/"><i
-                            class="fa fa-youtube fa-lg"></i></a>
-                </div>
-                <div class="col col-sm-4 text-center">
-                    <a role="button" class="btn btn-link" href="tel:+12065551234"><i
-                            class="fa fa-phone fa-lg text-primary"></i>Tel: 1-206-555-1234<br /></a>
-                    <a role="button" class="btn btn-link" href="mailto:campsites@nucamp.co"><i
-                            class="fa fa-envelope-o fa-lg text-primary"></i>Email: campsites@nucamp.co</a>
+            <div class="container">
+                <div class="row">
+                    <div class="col-4 col-sm-2 offset-1">
+                        <h5>Links</h5>
+                        <ul class="list-unstyled">
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="aboutus.html">About</a></li>
+                            <li><a href="#">Sites</a></li>
+                            <li><a href="contactus.html">Contact</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-6 col-sm-5 text-center">
+                        <h5>Social</h5>
+                        <a class="btn btn-social-icon-instagram btn-primary" href="http://instagram.com/"><i
+                                class="fa fa-instagram fa-lg"></i></a>
+                        <a class="btn btn-social-icon-facebook btn-primary" href="http://facebook.com/"><i
+                                class="fa fa-facebook fa-lg"></i></a>
+                        <a class="btn btn-social-icon-twitter btn-primary" href="http://twitter.com/"><i
+                                class="fa fa-twitter fa-lg"></i></a>
+                        <a class="btn btn-social-icon-youtube btn-primary" href="http://youtube.com/"><i
+                                class="fa fa-youtube fa-lg"></i></a>
+                    </div>
+                    <div class="col col-sm-4 text-center">
+                        <a role="button" class="btn btn-link" href="tel:+12065551234"><i class="fa fa-phone fa-lg text-primary"></i>Tel:
+                            1-206-555-1234<br /></a>
+                        <a role="button" class="btn btn-link" href="mailto:campsites@nucamp.co"><i
+                                class="fa fa-envelope-o fa-lg text-primary"></i>Email: campsites@nucamp.co</a>
+                    </div>
                 </div>
             </div>
-
         </footer>
 
         <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
