--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     </div>
                     <!--Task 3 -->
                     <div class="col-md-4 col-xl-2 mt-4">
-                        <a class="btn btn-info btn-lg" href="#reserveForm"> Reserve Campsite</a>
+                        <a class="btn btn-info btn-lg" data-toggle="tooltip" data-placement="bottom" data-html="true" title="Or call us at <br/><strong>1-612-385-888</strong>" href="#reserveForm"> Reserve Campsite</a>
                     </div>
                 </div>
             </div>
@@ -92,7 +92,7 @@
                                 a favorite for fly fishers.</p>
                         </div>
                         <img class="d-flex img-thumbnail ml-3" src="img/react-lake-thumb.jpg"
-                            alt="React Lake Campground" />
+                            alt="React Lake Campground" data-toggle="tooltip" data-placement="left" title="Bootstrap Outfitters"  />
                     </div>
                 </div>
             </div>
@@ -189,6 +189,11 @@
         <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
         <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
         <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+        <script>
+            $(function () {
+                    $('[data-toggle="tooltip"]').tooltip()
+                })
+        </script>
 
     </body>
 
