--- a/index.html
+++ b/index.html
@@ -186,21 +186,18 @@
             </div>
         </div>
         <!-- Exercise Carousel -->
-
         <div class="container">
             <div class="row row-content">
                 <div class="col-md-8 mx-auto">
-
-                    <ol class="carousel-indicators">
-                        <li data-target="#homeCarousel" data-slide-to="0" class="active"> </li>
-                        <li data-target="#homeCarousel" data-slide-to="1"> </li>
-                        <li data-target="#homeCarousel" data-slide-to="2"> </li>
-                    </ol>
                     <div id="homeCarousel" class="carousel slide" data-ride="carousel">
                         <div class="carousel-inner">
+                            <ol class="carousel-indicators">
+                                <li data-target="#homeCarousel" data-slide-to="0" class="active"> </li>
+                                <li data-target="#homeCarousel" data-slide-to="1"> </li>
+                                <li data-target="#homeCarousel" data-slide-to="2"> </li>
+                            </ol>
                             <div class="carousel-item active">
                                 <img class="d-block w-100" src="img/grand-marais.jpeg" alt="Grand Marais Lake" />
-
                                 <div class="carousel-caption">
                                     <h4>Grand Marais Campground & Marina </h4>
                                     <p class="d-none d-md-block">The Grand Marais municipal campground is the ideal base
@@ -224,15 +221,18 @@
                                 </div>
                             </div>
                         </div>
+                        <a class="carousel-control-prev" href="#homeCarousel" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#homeCarousel" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                        <button class="btn btn-danger btn-sm" id="carouselButton">
+                            <i class="fa fa-pause"></i>
+                        </button>
                     </div>
-                    <a role="button" class="carousel-control-prev" data-slide="prev" href="#homeCarousel">
-                        <span class="carousel-control-prev-icon"> </span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a role="button" class="carousel-control-next" data-slide="next" href="#homeCarousel">
-                        <span class="carousel-control-next-icon"> </span>
-                        <span class="sr-only">Next</span>
-                    </a>
                 </div>
             </div>
         </div>
@@ -337,6 +337,7 @@
         <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
         <script src="js/script.js"></script>
         <!-- endbuild -->
+     
 
     </body>
 
