Correcting homepage spelling mistake

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                                     </div>
                                 </div>
                                 <!--Week3 Task3-->
-                                <div class="row form-group">
+                                <div class="form-group row">
                                     <label class="col-form-label col-sm-6">Campsite Type</label>
                                     <div class="btn-group btn-group-toggle" data-toggle="buttons">
                                         <label class="btn btn-success active">
@@ -78,8 +78,7 @@
                                         </label>
                                     </div>
                                 </div>
-
-                                <div class="row form-group">
+                                <div class="form-group row">
                                     <div class="col">
                                         <button type="button" class="btn btn-secondary"
                                             data-dismiss="modal">Cancel</button>
