fixing carousel bug

--- a/aboutus.html
+++ b/aboutus.html
@@ -162,12 +162,12 @@
                         </div>
                     </div>
                     <!-- Exercise Accordion-->
-                   <div class="row">
+<!--
+                       <div class="row">
                        <div class="col">
                            <h3>Accordion Exercise</h3>
                             <div id="accordion">
                                 <div class="card">
-                                    <!-- Accordion 1 -->
                                     <div role="tab" class="card-header">
                                         <h4 class="mb-0"> 
                                             <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#bootOutfitters" aria-expanded="true"
@@ -184,7 +184,6 @@
                                     </div>
                                 </div>
                                 <div class="card">
-                                    <!-- Accordion 2 -->
                                     <div role="tab" class="card-header">
                                         <h4 class="mb-0">
                                             <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#gitOE" aria-expanded="false"
@@ -201,8 +200,6 @@
                                     </div>
                                 </div>
                                 <div class="card">
-                                    <!-- Accordion 3 -->
-                                    <div role="tab" class="card-header">
                                         <h4>
                                             <a role="button" data-toggle="collapse" data-target="#mongoF">
                                                 Mongo Fly Shop <small>Your Neighborhood Fly Fishing Shop</small>
@@ -217,8 +214,6 @@
                                     </div>
                                 </div>
                                 <div class="card">
-                                    <!-- Accordion 4 -->
-                                    <div role="tab" class="card-header">
                                         <h4>
                                             <a data-toggle="collapse" data-target="#node">
                                                 Node Outdoor Apparel <small>Outdoor Clothes & Shoes</small>
@@ -235,7 +230,7 @@
 
                             </div>
                        </div>
-                   </div>
+                   </div> -->
                    <!--End Accordion-->
                    <!--Example for Accordion-->
                 
