--- a/index.html
+++ b/index.html
@@ -184,21 +184,21 @@
                 </div>
             </div>
         </div>
-        <!-- Exercise Carousel -->
         <div class="container">
+            <!-- Exercise Carousel -->
             <div class="row row-content">
                 <div class="col-md-8 mx-auto">
                     <div id="homeCarousel" class="carousel slide" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-target="#homeCarousel" data-slide-to="0" class="active"> </li>
+                            <li data-target="#homeCarousel" data-slide-to="1"> </li>
+                            <li data-target="#homeCarousel" data-slide-to="2"> </li>
+                        </ol>
                         <div class="carousel-inner">
-                            <ol class="carousel-indicators">
-                                <li data-target="#homeCarousel" data-slide-to="0" class="active"> </li>
-                                <li data-target="#homeCarousel" data-slide-to="1"> </li>
-                                <li data-target="#homeCarousel" data-slide-to="2"> </li>
-                            </ol>
                             <div class="carousel-item active">
                                 <img class="d-block w-100" src="img/grand-marais.jpeg" alt="Grand Marais Lake" />
                                 <div class="carousel-caption">
-                                    <h4>Grand Marais Campground & Marina </h4>
+                                    <h3>Grand Marais Campground & Marina </h3>
                                     <p class="d-none d-md-block">The Grand Marais municipal campground is the ideal base
                                         camp for access to Lake Superior and the surrounding region. </p>
                                 </div>
@@ -206,17 +206,19 @@
                             <div class="carousel-item">
                                 <img class="d-block w-100" src="img/Redwing hill.jpeg" alt="Red Wing Downtown Hill" />
                                 <div class="carousel-caption">
-                                    <h4>Red Wing Downtown Hill </h4>
-                                    <p class="d-none d-md-block">let Nucamp be your guide to this off-the-beaten-path,
-                                        hike-in-only campground. </p>
+                                    <h3>Red Wing Downtown Hill </h3>
+                                    <p class="d-none d-md-block">Nestled in the foothills of the Chrome Mountains, this
+                                        campground on the shores of the pristine React Lake is a favorite
+                                        for fly fishers. </p>
                                 </div>
                             </div>
                             <div class="carousel-item">
                                 <img class="d-block w-100" src="img/redwing-downtown.jpeg" alt="Red Wing Downtown" />
                                 <div class="carousel-caption">
-                                    <h4>Red Wing Downtown </h4>
-                                    <p class="d-none d-md-block">let Nucamp be your guide to this off-the-beaten-path,
-                                        hike-in-only campground. </p>
+                                    <h3>Red Wing Downtown </h3>
+                                    <p class="d-none d-md-block">Spend a few sunny days and starry nights beneath a
+                                        canopy of old-growth firs at this enchanting spot by the Chrome
+                                        River.</p>
                                 </div>
                             </div>
                         </div>
@@ -228,15 +230,12 @@
                             <span class="carousel-control-next-icon"></span>
                             <span class="sr-only">Next</span>
                         </a>
-                        <button class="btn btn-danger btn-sm" id="carouselButton">
+                        <button class="btn btn-info btn-sm" id="carouselButton">
                             <i class="fa fa-pause"></i>
                         </button>
                     </div>
                 </div>
             </div>
-        </div>
-
-        <div class="container">
             <div class="row row-content align-items-center">
                 <div class="col">
                     <div class="media">
@@ -290,8 +289,6 @@
                     <h2 class="text-lg-right">Our Community Partners</h2>
                 </div>
             </div>
-            <!--Workshop Assignment-->
-            <!-- Task 2 -->
         </div>
 
         <footer class="site-footer">
@@ -327,8 +324,7 @@
                 </div>
             </div>
         </footer>
-        <i onclick="topFunction()" id="myBtn" class="btn btn-primary fa fa-arrow-circle-up btn-lg" aria-hidden="false"
-            data-toggle="tooltip" data-placement="left" title="Go to top"></i>
+
         <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
         <!-- build:js js/main.js -->
         <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
@@ -336,7 +332,7 @@
         <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
         <script src="js/script.js"></script>
         <!-- endbuild -->
-     
+
 
     </body>
 
