--- a/indexCarousel.html
+++ b/indexCarousel.html
@@ -5,12 +5,13 @@
         <!-- Required meta tags always come first -->
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <!-- Bootstrap CSS -->
+        <!-- build:css css/main.css -->
         <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
         <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
-        <!-- Additional CSS must be placed after Bootstrap CSS -->
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
+        <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
         <link rel="stylesheet" href="css/styles.css" />
+        <!-- endbuild -->
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
         <title>NuCamp: A Better Way To Camp</title>
     </head>
 
@@ -44,7 +45,7 @@
                         <div class="container-fluid">
                             <form id="reserveForm">
                                 <div class="row form-group">
-                                    <label class="col-sm-6 col-form-label">Number of Campers</label>
+                                    <label for="numCampers" class="col-sm-6 col-form-label">Number of Campers</label>
                                     <div class="col">
                                         <select class="form-control" name="numCampers" id="numCampers">
                                             <option value="1">1</option>
@@ -64,24 +65,24 @@
                                     </div>
                                 </div>
                                 <!--Week3 Task3-->
-                                <div class="row form-group">
+                                <div class="form-group row">
                                     <label class="col-form-label col-sm-6">Campsite Type</label>
                                     <div class="btn-group btn-group-toggle" data-toggle="buttons">
                                         <label class="btn btn-success active">
-                                            <input type="radio" name="siteType" id="siteTent" value="tent" autocomplete="off"
-                                                checked> tent
+                                            <input type="radio" name="siteType" id="siteTent" value="tent"
+                                                autocomplete="off" checked> Tent
                                         </label>
                                         <label class="btn btn-primary">
-                                            <input type="radio" name="siteType" id="siteRV" value="RV" autocomplete="off"> RV
+                                            <input type="radio" name="siteType" id="siteRV" value="RV"
+                                                autocomplete="off"> RV
                                         </label>
                                     </div>
                                 </div>
-
-                                <div class="row">
+                                <div class="form-group row">
                                     <div class="col">
                                         <button type="button" class="btn btn-secondary"
                                             data-dismiss="modal">Cancel</button>
-                                        <button class="btn btn-primary" type="submit" id="reserveForm">Reserve</button>
+                                        <button class="btn btn-primary" type="submit">Search</button>
                                     </div>
                                 </div>
                             </form>
@@ -183,24 +184,21 @@
                 </div>
             </div>
         </div>
-        <!-- Exercise Carousel -->
-
         <div class="container">
+            <!-- Exercise Carousel -->
             <div class="row row-content">
                 <div class="col-md-8 mx-auto">
-
-                    <ol class="carousel-indicators">
-                        <li data-target="#homeCarousel" data-slide-to="0" class="active"> </li>
-                        <li data-target="#homeCarousel" data-slide-to="1"> </li>
-                        <li data-target="#homeCarousel" data-slide-to="2"> </li>
-                    </ol>
                     <div id="homeCarousel" class="carousel slide" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-target="#homeCarousel" data-slide-to="0" class="active"> </li>
+                            <li data-target="#homeCarousel" data-slide-to="1"> </li>
+                            <li data-target="#homeCarousel" data-slide-to="2"> </li>
+                        </ol>
                         <div class="carousel-inner">
                             <div class="carousel-item active">
                                 <img class="d-block w-100" src="img/grand-marais.jpeg" alt="Grand Marais Lake" />
-
                                 <div class="carousel-caption">
-                                    <h4>Grand Marais Campground & Marina </h4>
+                                    <h3>Grand Marais Campground & Marina </h3>
                                     <p class="d-none d-md-block">The Grand Marais municipal campground is the ideal base
                                         camp for access to Lake Superior and the surrounding region. </p>
                                 </div>
@@ -208,36 +206,38 @@
                             <div class="carousel-item">
                                 <img class="d-block w-100" src="img/Redwing hill.jpeg" alt="Red Wing Downtown Hill" />
                                 <div class="carousel-caption">
-                                    <h4>Red Wing Downtown Hill </h4>
-                                    <p class="d-none d-md-block">let Nucamp be your guide to this off-the-beaten-path,
-                                        hike-in-only campground. </p>
+                                    <h3>Red Wing Downtown Hill </h3>
+                                    <p class="d-none d-md-block">Nestled in the foothills of the Chrome Mountains, this
+                                        campground on the shores of the pristine React Lake is a favorite
+                                        for fly fishers. </p>
                                 </div>
                             </div>
                             <div class="carousel-item">
                                 <img class="d-block w-100" src="img/redwing-downtown.jpeg" alt="Red Wing Downtown" />
                                 <div class="carousel-caption">
-                                    <h4>Red Wing Downtown </h4>
-                                    <p class="d-none d-md-block">let Nucamp be your guide to this off-the-beaten-path,
-                                        hike-in-only campground. </p>
+                                    <h3>Red Wing Downtown </h3>
+                                    <p class="d-none d-md-block">Spend a few sunny days and starry nights beneath a
+                                        canopy of old-growth firs at this enchanting spot by the Chrome
+                                        River.</p>
                                 </div>
                             </div>
                         </div>
+                        <a class="carousel-control-prev" href="#homeCarousel" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#homeCarousel" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                        <button class="btn btn-info btn-sm" id="carouselButton">
+                            <i class="fa fa-pause"></i>
+                        </button>
                     </div>
-                    <a role="button" class="carousel-control-prev" data-slide="prev" href="#homeCarousel">
-                        <span class="carousel-control-prev-icon"> </span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a role="button" class="carousel-control-next" data-slide="next" href="#homeCarousel">
-                        <span class="carousel-control-next-icon"> </span>
-                        <span class="sr-only">Next</span>
-                    </a>
                 </div>
             </div>
-        </div>
-
-        <div class="container">
             <div class="row row-content align-items-center">
-                <div class="col">
+                <div class="col" id="campSite">
                     <div class="media">
                         <img class="d-flex mr-3 img-thumbnail img-radius" src="img/breadcrumb-trail-thumb.jpg"
                             alt="Breadcrumb Trail" />
@@ -289,8 +289,6 @@
                     <h2 class="text-lg-right">Our Community Partners</h2>
                 </div>
             </div>
-            <!--Workshop Assignment-->
-            <!-- Task 2 -->
         </div>
 
         <footer class="site-footer">
@@ -326,36 +324,16 @@
                 </div>
             </div>
         </footer>
-        <i onclick="topFunction()" id="myBtn" class="btn btn-primary fa fa-arrow-circle-up btn-lg" aria-hidden="false"
-            data-toggle="tooltip" data-placement="left" title="Go to top"></i>
+
         <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
+        <!-- build:js js/main.js -->
         <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
         <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
         <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
         <script src="js/script.js"></script>
-        <script>
+        <!-- endbuild -->
 
 
-            //Get the button
-            var mybutton = document.getElementById("myBtn");
-
-            // When the user scrolls down 20px from the top of the document, show the button
-            window.onscroll = function () { scrollFunction() };
-
-            function scrollFunction() {
-                if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-                    mybutton.style.display = "block";
-                } else {
-                    mybutton.style.display = "none";
-                }
-            }
-
-            // When the user clicks on the button, scroll to the top of the document
-            function topFunction() {
-                document.body.scrollTop = 0;
-                document.documentElement.scrollTop = 0;
-            }
-        </script>
 
     </body>
 
