Completed Week4 assignment

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     </div>
                     <!--Week3 Task 2 -->
                     <div class="col-md-4 col-xl-2 mt-4">
-                        <a class="btn btn-info btn-lg" data-toggle="modal" data-target="#reserveModal"> Reserve
+                        <a class="btn btn-info btn-lg" role="button" id="reserveButton"> Reserve
                             Campsite</a>
                     </div>
                 </div>
@@ -116,7 +116,7 @@
                     </ul>
                     <!--Adding a Modal-->
                     <span class="navbar-text ml-auto">
-                        <a data-toggle="modal" data-target="#loginModal">
+                        <a class="btn btn-sm" id="loginButton">
                             <i class="fa fa-sign-in inline-block"></i> Login</a>
                     </span>
                 </div>
