This commit is to correct the week4 assignment and week5 exercise

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div id="reserveModal" class="modal fade" role="dialog">
             <div class="modal-dialog modal-lg" role="document">
                 <div class="modal-content">
-                    <div class="modal-header bg-info text-white">
+                    <div class="modal-header">
                         <h3 class="modal-title">Reserve Campsite </h3>
                         <button type="button" class="close" data-dismiss="modal">&times;</button>
                     </div>
@@ -67,7 +67,7 @@
                                 <!--Week3 Task3-->
                                 <div class="form-group row">
                                     <label class="col-form-label col-sm-6">Campsite Type</label>
-                                    <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                                    <div class="col btn btn-group btn-group-toggle" data-toggle="buttons">
                                         <label class="btn btn-success active">
                                             <input type="radio" name="siteType" id="siteTent" value="tent"
                                                 autocomplete="off" checked> Tent
